[gd_scene load_steps=7 format=3 uid="uid://c42sfrnl684n0"]

[ext_resource type="Script" path="res://src/modes/gauntlet/level_generator.gd" id="2_epjwl"]
[ext_resource type="Script" path="res://src/modes/gauntlet/hill_generator.gd" id="2_ow8bn"]
[ext_resource type="Script" path="res://src/modes/gauntlet/hazard_generator.gd" id="3_k2vux"]
[ext_resource type="Script" path="res://src/modes/gauntlet/obstacle_generator.gd" id="4_e8qkv"]
[ext_resource type="PackedScene" uid="uid://dkw86e8mfcgdq" path="res://src/player/player.tscn" id="5_h5oua"]

[sub_resource type="GDScript" id="GDScript_4ied8"]
script/source = "extends Node2D
"

[node name="World" type="Node2D"]

[node name="LevelGenerator" type="Node2D" parent="."]
script = ExtResource("2_epjwl")
max_active_segments = 5

[node name="HillGenerator" type="Node2D" parent="LevelGenerator"]
script = ExtResource("2_ow8bn")

[node name="HazardGenerator" type="Node2D" parent="LevelGenerator"]
script = ExtResource("3_k2vux")

[node name="ObstacleGenerator" type="Node2D" parent="LevelGenerator"]
script = ExtResource("4_e8qkv")

[node name="StoreGenerator" type="Node2D" parent="LevelGenerator"]
script = SubResource("GDScript_4ied8")

[node name="SpecialGenerator" type="Node2D" parent="LevelGenerator"]

[node name="Player" parent="." instance=ExtResource("5_h5oua")]
position = Vector2(2182, -2032)
